--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create A Blog Post</title>
+    <!-- Include stylesheet -->
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
 
 <body>
@@ -14,9 +16,45 @@
         <label for="title">Post Title</label>
         <input type="text" name="title"><br>
         <label for="content">Post Content</label><br>
-        <textarea name="content" id="" cols="70" rows="10"></textarea><br>
+        <!-- Create the editor container -->
+        <div style="width: 90%; margin: 0 auto;margin-top: 20px; margin-bottom: 20px;">
+            <div id="editor" style="min-height:300px">
+            </div>
+        </div>
+        <input type="hidden" id="content" name="content">
         <input type="submit" value="Create Post"><br>
     </form>
+    <!-- Include the Quill library -->
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
+    <!-- Initialize Quill editor -->
+    <script>
+        var quill = new Quill('#editor', {
+            modules: {
+                toolbar: [
+                    [{ header: [1, 2, false] }],
+                    ['bold', 'italic', 'underline'],
+                    [{ 'list': 'ordered' }, { 'list': 'bullet' }],
+                    [{ 'script': 'sub' }, { 'script': 'super' }],
+                    [{ 'align': [] }],
+                    ['link', 'image', 'code-block', 'blockquote'],
+                    ['clean']
+                ]
+            },
+            placeholder: 'Start typing your post content ...',
+            theme: 'snow'
+        });
+        quill.on('text-change', function (delta, oldDelta, source) {
+            document.getElementById("content").value = quill.root.innerHTML;
+        });
+    </script>
+    <style>
+        .ql-snow .ql-editor pre.ql-syntax {
+            background-color: #586d0e;
+            color: #f8f8f2;
+            overflow: visible;
+        }
+    </style>
 </body>
 
 </html>
