--- a/templates/post.html
+++ b/templates/post.html
@@ -18,6 +18,8 @@
         rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/static/css/styles.css" rel="stylesheet" />
+    <!-- Include stylesheet -->
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
 
 <body>
@@ -75,8 +77,12 @@
     <article class="mb-4">
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                    <p>{{ post.blog_text }}</p>
+                <div class="ql-snow">
+                    <div class="col-md-10 col-lg-8 col-xl-7 ql-editor">
+                        {% autoescape off %}
+                        <p>{{ post.blog_text }}</p>
+                        {% endautoescape %}
+                    </div>
                 </div>
             </div>
         </div>
@@ -120,7 +126,8 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="/static/js/scripts.js"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 </body>
 
 </html>
