--- a/templates/post.html
+++ b/templates/post.html
@@ -128,6 +128,13 @@
     <!-- Core theme JS-->
     <script src="/static/js/scripts.js"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <style>
+        .ql-snow .ql-editor pre.ql-syntax {
+            background-color: #586d0e;
+            color: #f8f8f2;
+            overflow: visible;
+        }
+    </style>
 </body>
 
 </html>
