--- a/templates/post.html
+++ b/templates/post.html
@@ -78,7 +78,7 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="ql-snow">
-                    <div class="col-md-10 col-lg-8 col-xl-7 ql-editor">
+                    <div class="ql-editor">
                         {% autoescape off %}
                         <p>{{ post.blog_text }}</p>
                         {% endautoescape %}
