--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Learn Python with Tufayel</title>
+  <title>Learn Python with Tufayel - DevWithPython.com</title>
   <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -24,7 +24,7 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
     <div class="container px-4 px-lg-5">
-      <a class="navbar-brand" href="/">Start Bootstrap</a>
+      <a class="navbar-brand" href="/">DevWithPython</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -60,8 +60,8 @@
       <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
           <div class="site-heading">
-            <h1>Clean Blog</h1>
-            <span class="subheading">A Blog Theme by Start Bootstrap</span>
+            <h1>Dev With Python</h1>
+            <span class="subheading">Let's explore and learn Python together with Tufayel</span>
           </div>
         </div>
       </div>
@@ -91,11 +91,15 @@
         <!-- Divider-->
         <hr class="my-4" />
         {% empty %}
-        <p>No blog post is published yet. Keep checking to see posts as soon as they are published</p>
+        <p>No more blog post is published yet. Keep checking to see posts as soon as they are published</p>
         {% endfor %}
         <!-- Pager-->
         <div class="d-flex justify-content-end mb-4">
-          <a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a>
+          {% if next_archive_id is None %}
+          <a class="btn btn-primary text-uppercase" href="/archive/1">Older Posts →</a>
+          {% else %}
+          <a class="btn btn-primary text-uppercase" href="/archive/{{ next_archive_id }}">Older Posts →</a>
+          {% endif %}
         </div>
       </div>
     </div>
@@ -107,7 +111,7 @@
         <div class="col-md-10 col-lg-8 col-xl-7">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="#!">
+              <a href="https://twitter.com/cse_tufayel">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -115,15 +119,15 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#!">
+              <a href="https://www.linkedin.com/in/tufayel-ahmed-cse/">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#!">
+              <a href="https://github.com/TufayelLUS">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
@@ -132,7 +136,7 @@
             </li>
           </ul>
           <div class="small text-center text-muted fst-italic">
-            Copyright &copy; Your Website 2021
+            Copyright &copy; DevWithPython.com {% now "Y" %}
           </div>
         </div>
       </div>
