--- a/templates/post.html
+++ b/templates/post.html
@@ -119,8 +119,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="small text-center text-muted fst-italic">Copyright &copy; DevWithPython.com {% now "Y"
-                        %}
+                    <div class="small text-center text-muted fst-italic">Copyright &copy; DevWithPython.com {% now "Y"%}
                     </div>
                 </div>
             </div>
