--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Login - Learn Python with Tufayel</title>
+    <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script
+      src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Google fonts-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="/static/css/styles.css" rel="stylesheet" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login to your account</title>
-</head>
-
-<body>
-    <form action="login" method="POST" style="text-align: center;">
-        {%csrf_token%}
-        <label for="username">Username</label>
-        <input type="text" name="username"><br>
-        <label for="username">Password</label>
-        <input type="password" name="password"><br>
-        <input type="submit" value="Login"><br>
-    </form>
-</body>
-
+  <body>
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark" id="mainNav">
+      <div class="container px-4 px-lg-5">
+        <a class="navbar-brand text-white" href="/">DevWithPython</a>
+        <button
+          class="navbar-toggler text-white"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          Menu
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ms-auto py-4 py-lg-0">
+            <li class="nav-item">
+              <a class="nav-link px-lg-3 py-3 py-lg-4 text-white" href="/"
+                >Home</a
+              >
+            </li>
+            {% if request.user.is_anonymous %}
+            <li class="nav-item">
+              <a class="nav-link px-lg-3 py-3 py-lg-4 text-white" href="/login"
+                >Login</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-lg-3 py-3 py-lg-4 text-white" href="/signup"
+                >Create An Account</a
+              >
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a
+                class="nav-link px-lg-3 py-3 py-lg-4 text-white"
+                href="/createPost"
+                >Create Post</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-lg-3 py-3 py-lg-4 text-white" href="/logout"
+                >({{ request.user.get_username }}) Logout</a
+              >
+            </li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="mb-5">&nbsp;</div>
+    <div class="mb-5">&nbsp;</div>
+    <!-- Main Content-->
+    <main class="mb-4 mt-5">
+      <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+          <div class="col-md-10 col-lg-8 col-xl-7">
+            {% if messages %}
+            <div class="alert alert-danger" role="alert">
+              {% for message in messages %}
+              <li>{{ message }}</li>
+              {% endfor %}
+            </div>
+            {% endif %}
+            <h3>Log In</h3>
+            <div class="my-5">
+              <form method="POST" action="" data-sb-form-api-token="NONE">
+                {% csrf_token %}
+                <div class="form-floating">
+                  <input
+                    class="form-control"
+                    id="username"
+                    type="text"
+                    name="username"
+                    placeholder="Enter your username..."
+                    required
+                  />
+                  <label for="username">Username</label>
+                  <div
+                    class="invalid-feedback"
+                    data-sb-feedback="username:required"
+                  >
+                    A Last Name is required
+                  </div>
+                </div>
+                <div class="form-floating">
+                  <input
+                    class="form-control"
+                    id="password"
+                    type="password"
+                    name="password"
+                    placeholder="Enter your password..."
+                    required
+                  />
+                  <label for="password">Password</label>
+                  <div
+                    class="invalid-feedback"
+                    data-sb-feedback="password:required"
+                  >
+                    A password is required.
+                  </div>
+                </div>
+                <br />
+                <!-- Submit Button-->
+                <button
+                  class="btn btn-primary text-uppercase"
+                  id="submitButton"
+                  type="submit"
+                >
+                  Login
+                </button>
+                <div id="submitSuccessMessage"></div>
+                <div id="submitErrorMessage"></div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- Footer-->
+    <footer class="border-top">
+      <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+          <div class="col-md-10 col-lg-8 col-xl-7">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item">
+                <a href="https://twitter.com/cse_tufayel">
+                  <span class="fa-stack fa-lg">
+                    <i class="fas fa-circle fa-stack-2x"></i>
+                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/tufayel-ahmed-cse/">
+                  <span class="fa-stack fa-lg">
+                    <i class="fas fa-circle fa-stack-2x"></i>
+                    <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/TufayelLUS">
+                  <span class="fa-stack fa-lg">
+                    <i class="fas fa-circle fa-stack-2x"></i>
+                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+            </ul>
+            <div class="small text-center text-muted fst-italic">
+              Copyright &copy; DevWithPython.com {% now "Y" %}
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+    <!-- Core theme JS-->
+    <script src="/static/js/scripts.js"></script>
+  </body>
 </html>
