--- a/templates/login.html
+++ b/templates/login.html
@@ -115,7 +115,7 @@
                     class="invalid-feedback"
                     data-sb-feedback="username:required"
                   >
-                    A Last Name is required
+                    A username is required
                   </div>
                 </div>
                 <div class="form-floating">
