--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description" content="Learn Python free with Tufayel" />
+  <meta name="author" content="Tufayel Ahmed" />
   <title>Learn Python with Tufayel - DevWithPython.com</title>
   <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
