--- a/templates/post.html
+++ b/templates/post.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="{{ post.blog_text|truncatechars:120|striptags }}" />
+    <meta name="author" content="{{ post.blog_owner }}" />
     <title>{{ post.blog_title }}</title>
     <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
